implementation of the intent mechanism to start the edit contact activity , & adding an id property to the person model

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
             </intent-filter>
         </activity>
 
+
+        <activity android:name=".activities.EditContactActivity"
+            android:parentActivityName=".activities.PersonListActivity"/>
+
     </application>
 
 </manifest>
